[gd_scene load_steps=3 format=3 uid="uid://oc4yyao84wfn"]

[ext_resource type="Script" path="res://ui/level_finished/level_finished.gd" id="1_kbmrq"]
[ext_resource type="Theme" uid="uid://d384l0kaseax3" path="res://kenny_theme/kenny_theme.tres" id="1_uhb1d"]

[node name="LevelFinished" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uhb1d")
script = ExtResource("1_kbmrq")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1152.0
offset_top = -700.0
offset_right = 1158.0
offset_bottom = 708.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.341176)

[node name="Dialog" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.095
offset_top = -232.875
offset_right = 364.095
offset_bottom = 232.875
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryBanner" type="Label" parent="Dialog"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderLarge"
text = "You Solved It!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Dialog"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Dialog"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Dialog/CenterContainer"]
layout_mode = 2

[node name="LevelCompletionTextLabel" type="Label" parent="Dialog/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You completed the level in"
horizontal_alignment = 1

[node name="StepCountLabel" type="Label" parent="Dialog/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LoudLabel"
text = "128 moves"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Dialog"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Dialog"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="Dialog/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Retry"

[node name="NextLevelButton" type="Button" parent="Dialog/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Next Level"

[connection signal="pressed" from="Dialog/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Dialog/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
